# git-outpost

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.agents-artifacts/progress/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
.agents-artifacts/qa/phase-1/: add-baseline-clone.md  list-ahead-behind.md  list-basic-summaries.md
.agents-artifacts/qa/phase-2/: chunk-plan.md  lock-move-unlock.md  prune.md  remove-safety.md  test-plan.md
.agents-artifacts/qa/phase-3/: chunk-plan.md  status-local-state.md  status-relationship-health.md  status-report-core.md  test-plan.md
.agents-artifacts/qa/phase-4/: P4-C1-source-pull-foundation.md  P4-C2-merge-rebase.md  P4-C3-push-publication.md  chunk-plan.md  test-plan.md
.agents-artifacts/qa/phase-5/: P5-C1-cli-surface.md  P5-C2-dispatch-e2e.md  P5-C3-exit-color-platform-hardening.md  chunk-plan.md  test-plan.md
.agents-artifacts/reviews/phase-0/core-foundation/: evidence-pack.md  independent-review.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-0/git-and-ref-boundary/: evidence-pack.md  independent-review-rerun.md  independent-review.md  normal-review-rerun.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-0/phase0-fixture-scaffold/: evidence-pack.md  independent-review-rerun.md  independent-review.md  normal-review-rerun.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-1/add-baseline-clone/: evidence-pack.md  independent-review-rerun.md  independent-review.md  normal-review-rerun.md  normal-review.md  scope-review-rerun.md  scope-review.md
.agents-artifacts/reviews/phase-1/list-ahead-behind/: evidence-pack.md  independent-review-rerun.md  independent-review.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-1/list-basic-summaries/: evidence-pack.md  independent-review-rerun.md  independent-review.md  normal-review-rerun.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-1/safety-gates/: evidence-pack.md  independent-review-rerun.md  independent-review.md  normal-review-rerun.md  normal-review.md  scope-review-rerun.md  scope-review.md
.agents-artifacts/reviews/phase-1/source-outpost-discovery/: evidence-pack.md  independent-review-rerun.md  independent-review.md  normal-review-rerun.md  normal-review.md  scope-review-rerun.md  scope-review.md
.agents-artifacts/reviews/phase-1/storage-foundations/: evidence-pack.md  independent-review-rerun.md  independent-review.md  normal-review-rerun.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-2/lock-move-unlock/: evidence-pack.md  independent-review.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-2/prune/: evidence-pack.md  independent-review.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-2/remove-safety/: evidence-pack.md  independent-review.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-3/readiness/: readiness-audit.md
.agents-artifacts/reviews/phase-3/status-local-state/: evidence-pack.md  independent-review.md  normal-review.md  scope-review.md
.agents-artifacts/reviews/phase-3/status-relationship-health/: evidence-pack.md  normal-review.md  (+2 more)
.github/workflows/: ci.yml  dev.yml  docs.yml  integration.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  exit.rs  gh.rs  main.rs  output.rs  reporter_impls.rs
crates/cli/tests/: e2e.rs  flags.rs  help.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  git.rs  lib.rs  metadata.rs  outpost.rs  outpost_id.rs  path.rs  refname.rs  registry.rs  reporter.rs  safety.rs  selector.rs  source_repo.rs
crates/core/src/ops/: add.rs  analyze.rs  branch_analysis.rs  list.rs  lock.rs  merge.rs  mod.rs  move.rs  prune.rs  pull.rs  push.rs  rebase.rs  remove.rs  source.rs  status.rs  unlock.rs
crates/core/tests/: add.rs  analyze.rs  config.rs  fixture_smoke.rs  list.rs  lock_move_unlock.rs  merge.rs  outpost_id.rs  prune.rs  pull.rs  push.rs  rebase.rs  remove.rs  selector.rs  source.rs  status.rs
crates/core/tests/common/: fixture.rs
docs/: book.toml  coordinator-prompt.md
docs/src/: SUMMARY.md  architecture.md  product.md  roadmap.md
(+48 files in other folders)
