[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/OptimalCNC/git-outpost"

[workspace.dependencies]
chrono = { version = "^0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = ">=4.5, <4.6", features = ["derive"] }
dunce = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tempfile = "=3.10.0"
thiserror = "^1.0"
