[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/OptimalCNC/git-outpost"

[workspace.dependencies]
chrono = { version = "^0.4.10", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "^4.6", features = ["derive"] }
dunce = "^1.0"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0"
sha2 = "^0.11"
tempfile = "^3.27"
thiserror = "^2.0"
