[package]
name = "git-outpost"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "git-outpost"
path = "src/main.rs"

[[bin]]
name = "gop"
path = "src/main.rs"

[dependencies]
clap.workspace = true
outpost-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
