[package]
name = "git-outpost"
version = "0.1.1"
description = "Create self-contained Git outposts from a local repository for editor and devcontainer workflows."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[[bin]]
name = "git-outpost"
path = "src/main.rs"

[[bin]]
name = "gop"
path = "src/main.rs"

[dependencies]
clap.workspace = true
outpost-core = { path = "../core", version = "0.1.1" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
