[package]
name = "outpost-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
test-helpers = []

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
outpost-core = { path = ".", features = ["test-helpers"] }
