[package]
name = "outpost-core"
version = "0.1.1"
description = "Core library for Git Outpost, a clone-backed alternative to git worktree workflows."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
test-helpers = []

[dependencies]
chrono.workspace = true
dunce.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
dunce.workspace = true
outpost-core = { path = ".", features = ["test-helpers"] }
